[package]
name = "hyml_login"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-files = "*"
serde_qs = "0.8.4"
serde = "*"
urlencoding = "2.1.0"
actix-session = "0.4.1"

[dependencies.mongodb]
version = "2.0.0"
default-features = false
features = ["sync"]